project_qusasa/celery-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: qusasa-celery-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: qusasa-celery
  template:
    metadata:
      labels:
        app: qusasa-celery
    spec:
      containers:
        - name: qusasa-celery
          image: gcr.io/qusasa/qusasa-cloud-image:v5
          command: ["celery", "-A", "project_qusasa", "worker", "--loglevel=info"]
          imagePullPolicy: Always
          resources:
            requests:
              memory: "2048Mi"
              cpu: "1000m"
            limits:
              memory: "4096Mi"
              cpu: "2000m"
