project_qusasa/sql-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: postgres
spec:
  selector:
    matchLabels:
      app: postgres
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: postgres
    spec:
      containers:
      - name: postgres
        image: postgres:latest
        volumeMounts:
        - mountPath: /var/lib/postgresql/data/pgdata  # Mount the volume to the new subdirectory
          name: postgresdb
      volumes:
      - name: postgresdb
        persistentVolumeClaim:
          claimName: postgres-pvc
