project_qusasa/web-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: qusasa-web-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: qusasa-web
  template:
    metadata:
      labels:
        app: qusasa-web
    spec:
      containers:
        - name: qusasa-web
          image: qusasa-cloud-image:v2  # Consider using a specific version tag instead of latest for stability
          ports:
            - containerPort: 8000
          resources:
            requests:
              memory: "64Mi"
              cpu: "250m"
            limits:
              memory: "128Mi"
              cpu: "500m"
          livenessProbe:
            httpGet:
              path: /healthcheck/
              port: 8000
            initialDelaySeconds: 15
            timeoutSeconds: 2
          readinessProbe:
            httpGet:
              path: /healthcheck/
              port: 8000
            initialDelaySeconds: 5
            timeoutSeconds: 2
