project_qusasa/web-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: qusasa-web-service
spec:
  type: LoadBalancer
  selector:
    app: qusasa-web
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8000
